# ca_document_manager

./: .gitignore  README.md  app_launcher.py  dev_launcher.py  pyproject.toml
backend/: README.md  api.py  cors.py  main.py  pyproject.toml  redis_client.py  test_rfis_access.py  token_store.py
backend/userInput/: fieldList.json
ca_manager/: package.json
ca_manager/python_backend/: main.py  pyproject.toml
ca_manager/src-tauri/: Cargo.toml  tauri.conf.json
ca_manager/src-tauri/src/: lib.rs  main.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ConfigTab.jsx  ExportButton.jsx  RFITable.jsx
frontend/src/components/filters/: FiltersPanel.jsx
frontend/src/components/ui/: button.jsx
frontend/src/pages/: LoginPage.jsx  MainPage.jsx
nya-log-app/: index.html  package-lock.json  package.json
nya-log-app/src/: main.tsx
nya-log-app/src/pages/: ForgotPasswordPage.tsx  LoginPage.tsx  SignupPage.tsx
src/ca_document_manager/: test_rfis_access.py
